@@ -4743,3 +4743,5 @@
          error handling (Sergio).
 20150322 menu.c,tape.[c|h]: don't show an error when rewinding an empty tape
          (Sergio).
+20150322 ui/gtk/{confirm.c,fileselector.c,gtkinternals.h,pokemem.c,stock.c}:
+         replace deprecated GtkStock (Sergio).
